fixed background, styling changes, so the search bar won't overlap, search case for when there are no characters found for a particular episode

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+html{
+    background-image: url("./bg.jpg");
+    background-attachment: fixed;
+}
 .App {
     text-align: center;
-    background-image: url("./bg.jpg");
+
     height:100%;
 }
 
@@ -18,7 +22,6 @@
 .App-header {
   background-color: #282c34;
   min-height: 10vh;
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -30,16 +33,27 @@
   color: #61dafb;
 }
 
+.search-bar {
+    position: absolute;
+    float: top;
+    padding: 10px;
+    border-radius: 25px;
+    top: -50px;
+    left: 50px;
+}
+
 .flexbox-container {
     position: relative;
     display: flex;
+    flex-grow: 1;
+    height: 100%;
     flex-flow: row wrap;
     justify-content: space-evenly;
 }
 
 .profile-card {
     border: 3px solid green;
-    background-color: cyan;
+    background-color: lightgreen;
     border-radius: 25px;
     max-height: 200px;
     max-width: 400px;
@@ -89,6 +103,9 @@
     color:grey;
 }
 
+.NotFound {
+    color: green;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
